[project]
name = "binaural-audio"
version = "0.1.0"
description = "simple binaural audio with fftconvolve and SADIE HRTFs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "dearpygui>=2.0.0",
    "ffmpeg-python>=0.2.0",
    "numpy>=2.2.3",
    "pyaudio>=0.2.14",
    "scipy>=1.15.2",
]
[tool.ruff]
line-length = 120
